# polybaskets

./: .dockerignore  .env.daily-contest.example  .env.example  .env.secrets.example  .gitignore  CLAUDE.md  Caddyfile  README.md  TODOS.md  docker-compose.daily-contest.yml  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.agents/skills/polybaskets-skills/: STARTER_PROMPT.md
.claude/skills/polybaskets-agent-identity/: SKILL.md  errors.md  recipes.md
arena-service/: .env.example  Dockerfile  README.md  package-lock.json  package.json
arena-service/src/: cron.ts  db.ts  index.ts  schema.ts
arena-service/src/routes/: health.ts  leaderboard.ts  names.ts
arena-service/src/services/: activity-index.ts
bet-lane/: .binpath  Cargo.toml  README.md  build.rs
bet-lane/app/: Cargo.toml
bet-lane/app/src/: lib.rs
bet-lane/client/: Cargo.toml  bet_lane_client.idl  build.rs
bet-lane/client/src/: bet_lane_client.rs  lib.rs
bet-lane/src/: lib.rs
bet-lane/tests/: bet_lane_gtest.rs
bet-quote-service/: Dockerfile  README.md  package-lock.json  package.json
bet-quote-service/src/: chain.ts  config.ts  index.ts  polymarket.ts  quote.ts
bet-token/: .binpath  Cargo.toml  README.md  build.rs
bet-token/app/: Cargo.toml
bet-token/app/src/: lib.rs
bet-token/client/: Cargo.toml  bet_token_client.idl  build.rs
bet-token/client/src/: bet_token_client.rs  lib.rs
bet-token/src/: lib.rs
bet-token/tests/: bet_token_gtest.rs
contest-bot/: Dockerfile  README.md  package-lock.json  package.json
contest-bot/src/: config.ts  core.ts  index.ts  types.ts
contest-bot/src/adapters/: daily-contest-chain.ts  graphql-read-model.ts  memory-chain.ts
daily-contest/: .binpath  Cargo.toml  README.md  build.rs  daily-contest.idl
daily-contest/app/: Cargo.toml
daily-contest/app/src/: lib.rs
daily-contest/client/: Cargo.toml  build.rs
daily-contest/client/src/: lib.rs
daily-contest/src/: lib.rs
daily-contest/tests/: daily_contest_gtest.rs
docs/superpowers/plans/: 2026-05-01-agent-registrar-backend.md  2026-05-06-agent-ens-subname.md
docs/superpowers/specs/: 2026-05-01-agent-identity-offchain-subnames.md  2026-05-06-agent-ens-subname-design.md
indexer/: Dockerfile  README.md  package-lock.json  package.json  schema.graphql  tsconfig.json
indexer/db/migrations/: 1762286400000-InitDailyContestIndexer.js  1762732800000-AddDailyUserActivityAggregate.js  1776729600000-AddContestWinnerRank.js  1776816000000-AddActivityFirstTx.js  1776902400000-AddAgentPublicIds.js  1776988800000-AddAllTimeLeaderboardStats.js
indexer/src/: api.ts  config.ts  main.ts  processor.ts  sails-decoder.ts
indexer/src/handlers/: base.ts  daily-contest.ts  index.ts
indexer/src/helpers/: agent-public-id.ts  is.ts
program/: .binpath  .gitignore  Cargo.toml  README.md  build.rs  polymarket-mirror.idl
program/app/: .binpath  Cargo.toml  build.rs
program/app/src/: lib.rs
program/client/: Cargo.toml  build.rs
program/client/src/: lib.rs  polymarket_mirror_client.rs
program/docs/plans/: 2026-04-07-agent-registration-architecture.md  2026-04-07-agent-registration-spec.md  2026-04-07-agent-registration-tasks.md
program/src/: lib.rs
program/tests/: agent_registration_gtest.rs  migration_gtest.rs  vara_toggle_gtest.rs
public/: polymarket-mirror.idl
relayer/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
relayer/src/: index.ts  polymarket.ts  vara.ts
settler-bot/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
settler-bot/sails-client/: global.d.ts  lib.d.ts  lib.d.ts.map  lib.js  lib.js.map  lib.ts
settler-bot/scripts/: convert-address.ts  extract-keypair.ts  get-settler-address.ts  keypair-info.md
settler-bot/src/: config.ts  index.ts  polymarket.ts  vara.ts
skills/: README.md  SKILL.md  STARTER_PROMPT.md
skills/.claude-plugin/: marketplace.json  plugin.json
skills/basket-bet/: SKILL.md  place_bet.py
skills/basket-claim/: SKILL.md
skills/basket-create/: SKILL.md
skills/basket-query/: SKILL.md
skills/basket-settle/: SKILL.md
skills/idl/: bet_token_client.idl  polymarket-mirror.idl
skills/polybaskets-overview/: SKILL.md
skills/references/: contract-interfaces.md  error-codes.md  program-ids.md
src/: App.tsx  env.ts  index.css  main.tsx
src/basket-market-client/: global.d.ts  lib.ts
src/bet-lane-client/: lib.ts
src/bet-token-client/: lib.ts
src/components/: AgentTradingNotice.tsx  BasketBuilder.tsx  BasketCard.tsx  BasketIndex.tsx  BetLanePanel.tsx  InviteGate.tsx  MarketCard.tsx  MarketSearch.tsx  NetworkToggle.tsx  PayoutCelebration.tsx  RegisterAgentDialog.tsx  SaveBasketButton.tsx  TransactionFeed.tsx  WalletButton.tsx
src/contexts/: BasketContext.tsx  NetworkContext.tsx  WalletContext.tsx
src/hooks/: useAgentNames.ts  useAgentRouteAddress.ts  useAgentSubname.ts  useAllTimeBasketWinnings.ts  useAllTimeContestWinners.ts  useCountdown.ts  useCryptoPrice.ts  useMarketLivePrices.ts  usePagedAllTimeBasketWinnings.ts  usePagedCommunityCurators.ts  usePriceToBeat.ts  useProjectStats.ts  useTodayContestLeaderboard.ts  useVaraEthBasketMarket.ts
src/lib/: agentRegistrar.ts  agentSign.ts  arena.ts  assetKind.ts  basket-onchain.ts  basket-storage.ts  basket-utils.ts  betCalculator.ts  betPrograms.ts  betQuoteService.ts  contestDay.ts  contestLeaderboard.ts  evmWallet.ts  network.ts  polymarket.ts  projectStats.ts  varaClient.ts  varaEthBasketClient.ts  varaEthClient.ts
src/pages/: AgentAwaitingPage.tsx  AgentBasketsPage.tsx  AgentProfilePage.tsx  BasketPage.tsx  BuilderPage.tsx  ClaimPage.tsx  DocsPage.tsx  ExplorePage.tsx  ExplorerHoldPage.tsx  Index.tsx  LandingPage.tsx  LeaderboardPage.tsx  MyBasketsPage.tsx  StatsPage.tsx
src/types/: basket.ts  polymarket.ts  window.d.ts
src/vara-client/: global.d.ts  lib.ts
voucher-backend/: .env.example  Dockerfile  README.md  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml
voucher-backend/src/: app.module.ts  main.ts  seed.ts
voucher-backend/test/: agents.e2e-spec.ts
(+79 files in other folders)
