[package]
name = "bet-lane"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package allowing to build WASM binary for the BET lane program and IDL file for it"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bet-lane-app.workspace = true
sails-rs.workspace = true

[dev-dependencies]
sails-rs = { workspace = true, features = ["gtest", "gclient"] }
tokio.workspace = true
bet-lane-client.workspace = true
bet-token-client.workspace = true
polymarket-mirror-client.workspace = true
gtest = "1.10.0"
awesome-sails-vft-admin = "0.2.0"
bet-token = { path = "../bet-token" }
polymarket-mirror = { path = "../program", features = ["wasm-binary"] }
rand_core = "0.6"
schnorrkel = { version = "0.10", default-features = false, features = ["u64_backend", "getrandom"] }

[build-dependencies]
bet-lane-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }

[workspace]
resolver = "3"
members = ["app", "client"]

[workspace.package]
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/gear-tech/polybaskets"
license = "MIT"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = "0.10.2"
tokio = "1.48.0"
bet-lane-app = { version = "0.1.0", path = "app" }
bet-lane-client = { version = "0.1.0", path = "client" }
bet-token-client = { version = "0.1.0", path = "../bet-token/client" }
polymarket-mirror-client = { version = "0.1.0", path = "../program/client" }
