[package]
name = "bet-token"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package allowing to build WASM binary for the program and IDL file for it"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bet-token-app.workspace = true
sails-rs.workspace = true

[dev-dependencies]
sails-rs = { workspace = true, features = ["gtest", "gclient"] }
tokio.workspace = true
bet-token-client.workspace = true
gtest = "1.10.0"
awesome-sails-access-control = "0.2.0"
awesome-sails-vft-admin = "0.2.0"
futures = "0.3.31"

[build-dependencies]
bet-token-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }

[workspace]
resolver = "3"
members = ["app", "client"]

[workspace.package]
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/gear-tech/polybaskets"
license = "MIT"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = "0.10.2"
tokio = "1.48.0"
bet-token-app = { version = "0.1.0", path = "app" }
bet-token-client = { version = "0.1.0", path = "client" }
