[package]
name = "bet-lane-app"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package containing business logic for the BET lane program"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs.workspace = true
awesome-sails-access-control = "0.2.0"
awesome-sails-storage = "0.2.0"
awesome-sails-utils = "0.2.0"
bet-token-client.workspace = true
polymarket-mirror-client.workspace = true
schnorrkel = { version = "0.10", default-features = false, features = ["u64_backend"] }
thiserror = { version = "=2.0.17", default-features = false }
