[package]
name = "bet-lane-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package containing the client for the BET lane program"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs.workspace = true

[build-dependencies]
bet-lane-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }
